--- a/DotnetTrainingStockApp/Views/StockItemDetailsPage.xaml
+++ b/DotnetTrainingStockApp/Views/StockItemDetailsPage.xaml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+xmlns:core="clr-namespace:Syncfusion.Maui.Core;assembly=Syncfusion.Maui.Core"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="DotnetTrainingStockApp.Views.StockItemDetailsPage"
              xmlns:viewmodel="clr-namespace:DotnetTrainingStockApp.ViewModels"
+             xmlns:sf="clr-namespace:Syncfusion.Maui.ListView;assembly=Syncfusion.Maui.ListView"
              x:DataType="viewmodel:StockItemDetailsViewModel"
              Shell.NavBarIsVisible="True"
              Title="StockItemDetailsPage">
@@ -14,33 +16,34 @@
 
         <Image Source="{Binding Path}" HeightRequest="200" WidthRequest="200" />
 
-        <ListView ItemsSource="{Binding Tags}">
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <ViewCell>
-                        <Grid Padding="10">
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto" />
-                            </Grid.RowDefinitions>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="Auto" />
-                            </Grid.ColumnDefinitions>
-                            <Label Grid.Column="0"
-                                   Text="{Binding }"
-                                   FontAttributes="Bold" />
-                        </Grid>
-                    </ViewCell>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
+        <Label Text="Detected Labels" 
+               FontSize="Large"
+               Margin="15,0"
+               BackgroundColor="CornflowerBlue"
+               TextColor="White"
+               HorizontalOptions="Center"/>
+        
+        <core:SfChipGroup 
+            ItemsSource="{Binding Tags}"              
+            ChipType="Action"
+            HorizontalOptions="Center"
+            Margin="0,10,0,10"
+            ChipBackground="CornflowerBlue"
+            ChipTextColor="White"
+                          >
+            <core:SfChipGroup.Items>
+                <core:SfChip
+                    Text="{Binding}" />
+            </core:SfChipGroup.Items>
+        </core:SfChipGroup>
 
 
-        <Button
+            <Button
             x:Name="AddToCartBtn"
             Text="Add to cart" 
             SemanticProperties.Hint="Adds this item to the cart"
             Clicked="OnAddToCartBtnClicked"
-            HorizontalOptions="Fill" />
-        
+            HorizontalOptions="Center" />
+
     </VerticalStackLayout>
 </ContentPage>
