--- a/DotnetTrainingStockApp/Views/StockItemDetailsPage.xaml
+++ b/DotnetTrainingStockApp/Views/StockItemDetailsPage.xaml
@@ -16,12 +16,14 @@ xmlns:core="clr-namespace:Syncfusion.Maui.Core;assembly=Syncfusion.Maui.Core"
 
         <Image Source="{Binding Path}" HeightRequest="200" WidthRequest="200" />
         <ActivityIndicator IsRunning="False" Color="Blue" IsVisible="False" x:Name="ActivityHandler"/>
+       
         <Label Text="Detected Labels" 
                FontSize="Large"
                Margin="15,0"
                BackgroundColor="CornflowerBlue"
                TextColor="White"
-               HorizontalOptions="Center"/>
+               HorizontalOptions="Center"
+               x:Name="DetectedHeadingLabel"/>
 
         <core:SfChipGroup 
             ItemsSource="{Binding Tags}"              
@@ -30,6 +32,7 @@ xmlns:core="clr-namespace:Syncfusion.Maui.Core;assembly=Syncfusion.Maui.Core"
             Margin="0,10,0,10"
             ChipBackground="CornflowerBlue"
             ChipTextColor="White"
+            x:Name="ChipsGroup"
                           >
             <core:SfChipGroup.Items>
                 <core:SfChip
