--- a/DotnetTrainingStockApp/Views/TempListView.xaml
+++ b/DotnetTrainingStockApp/Views/TempListView.xaml
@@ -12,8 +12,8 @@ xmlns:core="clr-namespace:Syncfusion.Maui.Core;assembly=Syncfusion.Maui.Core"
             Text="Welcome to .NET MAUI!"
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
-        <ListView x:Name="ItemsListView">
-            <ListView.ItemTemplate>
+        <ListView x:Name="ItemsListView" SeparatorColor="Blue" SeparatorVisibility="None">
+            <ListView.ItemTemplate >
                 <DataTemplate>
                     <ViewCell>
 
@@ -30,7 +30,24 @@ xmlns:core="clr-namespace:Syncfusion.Maui.Core;assembly=Syncfusion.Maui.Core"
                             <!--<Label Grid.Row="1" Text="{Binding ExpiryDate,StringFormat='{}Expiry Date: {0}'}" BackgroundColor="Red" TextColor="White" HorizontalOptions="Center" />-->
 
                             <!-- Third row: Label -->
-                            <Label Grid.Row="2" Text="{Binding ExpiryDate}" />
+                            <!--<Label Grid.Row="2" Text="{Binding ExpiryDate}" />-->
+
+
+                            <core:SfChipGroup 
+                                ItemsSource="{Binding TagsList}"              
+                                ChipType="Action"
+                                HorizontalOptions="Center"
+                                Margin="0,10,0,10"
+                                ChipBackground="CornflowerBlue"
+                                ChipTextColor="White"
+                                Grid.Row="2">
+
+                                <core:SfChipGroup.Items>
+                                    <core:SfChip
+                        Text="{Binding}" />
+                                </core:SfChipGroup.Items>           
+
+                            </core:SfChipGroup>
                         </Grid>
                     </ViewCell>
                 </DataTemplate>
