--- a/DotnetTrainingStockApp/Views/TempListView.xaml
+++ b/DotnetTrainingStockApp/Views/TempListView.xaml
@@ -4,15 +4,13 @@ xmlns:core="clr-namespace:Syncfusion.Maui.Core;assembly=Syncfusion.Maui.Core"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="DotnetTrainingStockApp.Views.TempListView"
              xmlns:sf="clr-namespace:Syncfusion.Maui.ListView;assembly=Syncfusion.Maui.ListView"
-             Title="List View">
+             Title="Your Scanned Items">
 
 
     <StackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-        <ListView x:Name="ItemsListView" SeparatorColor="Blue" SeparatorVisibility="None">
+
+        <ListView x:Name="ItemsListView"
+                  HasUnevenRows="True">
             <ListView.ItemTemplate >
                 <DataTemplate>
                     <ViewCell>
@@ -26,29 +24,30 @@ xmlns:core="clr-namespace:Syncfusion.Maui.Core;assembly=Syncfusion.Maui.Core"
 
                             <Image Grid.Row="0" Source="{Binding EntityImageSource}"  WidthRequest="200" HeightRequest="200" Aspect="AspectFill" HorizontalOptions="Center" VerticalOptions="Start" />
                             <Button HorizontalOptions="CenterAndExpand" Grid.Row="1" Text="{Binding ExpiryDate,StringFormat='{}Expiry Date: {0}'}" BackgroundColor="Red" TextColor="White" Margin="0,10,0,0"/>
-                            <!-- Second row: Label -->
-                            <!--<Label Grid.Row="1" Text="{Binding ExpiryDate,StringFormat='{}Expiry Date: {0}'}" BackgroundColor="Red" TextColor="White" HorizontalOptions="Center" />-->
 
-                            <!-- Third row: Label -->
-                            <!--<Label Grid.Row="2" Text="{Binding ExpiryDate}" />-->
-
-                            
-                            <core:SfChipGroup 
+                            <ScrollView 
+                                Orientation="Horizontal"
+                                Grid.Row="2">
+                                
+                                <core:SfChipGroup 
                                 ItemsSource="{Binding TagsList}"              
                                 ChipType="Action"
                                 HorizontalOptions="Center"
                                 Margin="0,10,0,10"
                                 ChipBackground="CornflowerBlue"
-                                ChipTextColor="White"
-                                Grid.Row="2">
+                                ChipTextColor="White">
+                                    
+                                    <core:SfChipGroup.Items>
+                                        <core:SfChip
+                                            Text="{Binding}" />
+                                    </core:SfChipGroup.Items>
 
-                                <core:SfChipGroup.Items>
-                                    <core:SfChip
-                        Text="{Binding}" />
-                                </core:SfChipGroup.Items>           
-
-                            </core:SfChipGroup>
+                                </core:SfChipGroup>
+                                
+                            </ScrollView>
+                            
                         </Grid>
+                        
                     </ViewCell>
                 </DataTemplate>
             </ListView.ItemTemplate>
